feat: Update testing on commit

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && yarn test"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
     "*.js": [
-      "eslint"
+      "eslint",
+      "jest --findRealatedTests"
     ],
     "**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)": [
       "prettier --write",
