feat: Add firebase key and project id

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,6 @@
-TWILIO_SID=XXXXX
-TWILIO_AUTH=XXXXX
+NODE_ENV=development
+PORT=XXXXXXX
+TWILIO_SID=XXXXXXX
+TWILIO_AUTH=XXXXXXX
+FIREBASE_API_KEY=XXXXXXX
+FIREBASE_PROJECT_ID=XXXXXXX
