--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "lint-staged": {
     "*.js": [
       "eslint",
-      "jest --findRealatedTests"
+      "jest --findRelatedTests"
     ],
     "**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)": [
       "prettier --write",
