--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "lint-staged": {
     "*.js": [
       "eslint",
-      "jest --findRealatedTests"
+      "jest --findRelatedTests"
     ],
     "**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)": [
       "prettier --write",
@@ -44,6 +44,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "firebase": "^6.4.2",
     "twilio": "^3.33.4"
   },
   "devDependencies": {
